--- a/SBInspector.Shared/Presentation/Components/UI/EntityTreeView.razor.css
+++ b/SBInspector.Shared/Presentation/Components/UI/EntityTreeView.razor.css
@@ -7,6 +7,7 @@
     min-width: 60px;
     width: 60px;
     max-width: 60px;
+    overflow: hidden;
 }
 
 .entity-tree-view.collapsed .mud-stack {
